--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-#placeholder
+<!-- placeholder -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John's Bench</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <header class="hero">
+        <img src="images/bench.jpg" alt="John's Memorial Bench">
+        <h1>John's Bench</h1>
+    </header>
+
+    <main class="content">
+        <section>
+            <h2>Welcome</h2>
+            <p>
+                This bench is dedicated in loving memory of John — a kind friend, a warm
+                presence, and someone who always found peace outdoors.  
+            </p>
+            <p>
+                We invite you to take a moment to sit, reflect, and enjoy the space that John 
+                loved so much.
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p>In loving memory of John.</p>
+    </footer>
+
+</body>
+</html>
