--- a/index.html
+++ b/index.html
@@ -4,32 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John's Bench</title>
+    <title>Pete's Bench</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header class="hero">
-        <img src="images/bench.jpg" alt="John's Memorial Bench">
-        <h1>John's Bench</h1>
+        <img src="images/ps_main.jpg" alt="Pete's Seat">
+        <h1>Pete's Seat</h1>
     </header>
 
     <main class="content">
         <section>
             <h2>Welcome</h2>
             <p>
-                This bench is dedicated in loving memory of John — a kind friend, a warm
-                presence, and someone who always found peace outdoors.  
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.  
             </p>
             <p>
-                We invite you to take a moment to sit, reflect, and enjoy the space that John 
+                We invite you to take a moment to sit, reflect, and enjoy the space that Pete 
                 loved so much.
             </p>
         </section>
     </main>
 
     <footer>
-        <p>In loving memory of John.</p>
+        <p>In loving memory of Pete.</p>
     </footer>
 
 </body>
