--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </main>
 
     <footer>
-        <img src="images/ps_view.jpg" alt="The view from Pete's Seat" class="hero">
+        <img src="images/ps_view.jpg" alt="The view from Pete's Seat">
         <p>In loving memory of Pete.</p>
     </footer>
 
