--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.  
             </p>
             <p>
-                We invite you to take a moment to sit, reflect, and enjoy the space that Pete 
-                loved so much.
+                We invite you to take a moment to sit, reflect, and enjoy the view.
             </p>
         </section>
     </main>
