--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
     <header class="hero">
-        <img src="images/ps_main.jpg" srcset="images/ps_banner.jpg 768w" alt="Pete's Seat">
+        <img src="images/ps_main.jpg" alt="Pete's Seat">
+        <!-- <img src="images/ps_main.jpg" srcset="images/ps_banner.jpg 768w" alt="Pete's Seat"> -->
         <h1>Pete's Seat</h1>
     </header>
 
