adding quote formatting

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <p>
                 We invite you to take a moment to sit, reflect, and enjoy the wonderful and peaceful view.
             </p>
+            <p class="quote">
+                "Hope in the face of difficulty. Hope in the face of uncertainty. The audacity of hope! A belief in things not seen. A belief that there are better days ahead" - Barrack Obama
+            </p>
         </section>
     </main>
 
