--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.  
             </p>
             <p>
-                We invite you to take a moment to sit, reflect, and enjoy the wonderful and peaceful view.
+                We invite you to take a moment to sit, reflect, and enjoy the wonderful, peaceful view.
             </p>
             <div class="quote">
                 "Hope in the face of difficulty. Hope in the face of uncertainty. The audacity of hope! A belief in things not seen. A belief that there are better days ahead" - Barrack Obama
