adding location comment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </section>
     </main>
-
+<!-- Location: -41.3543075, 173.2007920-->
     <footer>
         <img src="images/ps_view.jpg" alt="The view from Pete's Seat">
         <p>In loving memory of Pete.</p>
