--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             <div class="quote">
                 "Hope in the face of difficulty. Hope in the face of uncertainty. The audacity of hope! A belief in things not seen. A belief that there are better days ahead" - Barrack Obama
             </div>
+            <h3>How to find Pete' Seat</h3>
+            <p> 
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+            </p>
+            <img src="images/ps_map.png" alt="Getting to Pete's Seat">
         </section>
     </main>
 <!-- Location: -41.3543075, 173.2007920-->
