--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="quote">
                 "Hope in the face of difficulty. Hope in the face of uncertainty. The audacity of hope! A belief in things not seen. A belief that there are better days ahead" - Barrack Obama
             </div>
-            <h3>How to find Pete' Seat</h3>
+            <h3>How to find Pete's Seat</h3>
             <p> 
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
                 Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
